complete recipie section

--- a/index.html
+++ b/index.html
@@ -63,81 +63,70 @@
         </div>
 
     </section>
-    <section class="recipies">
+    <section class="recipies-section">
         <h1>My Recipies</h1>
         <P> If life could only be as simple as following a recipe, we’d all be much happier. However,<br> unlike food
             based
             recipes, life doesn’t provide you with standardized ingredients as each <br> lives their unique life.
         </P>
-        <div class="flexiable">
-            <div class="half-section">
-                <div class="recipie-item">
-                    <div>
-                        <img src="images/recipies (1).jpg" alt="">
-                    </div>
-                    <div>
-                        <h2>
-                            Lasagna Flatbread
-                        </h2>
-                        <p>
-                            Preheat oven to 375 degrees F (190 degrees C). Combine ricotta cheese, 1/2 of the mozzarella
-                            cheese,
-                            Parmesan cheese, egg, and Italian seasoning in
-                            a bowl.Cook sausage in a skillet over medium heat until no longer pink, 5 to 10 minutes;
-                            drain. Stir
-                            in marinara sauce.
-                        </p>
-                    </div>
+        <div class="recipies">
+            <div class="recipies-item">
+                <div>
+                    <img src="images/recipies (1).jpg" alt="">
                 </div>
-
-
-            </div>
-            <div class="half-section">
-                <div class="recipie-item">
-                    <div>
-                        <img src="images/recipies (2).jpg" alt="">
-                    </div>
-                    <div>
-                        <h2>
-                            Baked Chicken Schnitzel
-                        </h2>
-                        <p>
-                            Growing up, chicken schnitzel was a classic. I decided to make this dish oven-friendly using
-                            less
-                            oil, and an easier cleanup. This dish tastes great with potato salad, or mashed potatoes and
-                            a nice
-                            crisp salad. Tastes great the next day cold too! It's a family-favorite! Enjoy with fresh
-                            squeezed
-                            lemon juice.
-                        </p>
-                    </div>
+                <div>
+                    <h2>
+                        Lasagna Flatbread
+                    </h2>
+                    <p>
+                        Preheat oven to 375 degrees F (190 degrees C). Combine ricotta cheese, 1/2 of the mozzarella
+                        cheese,
+                        Parmesan cheese, egg, and Italian seasoning in
+                        a bowl.Cook sausage in a skillet over medium heat until no longer pink, 5 to 10 minutes;
+                        drain. Stir
+                        in marinara sauce.
+                    </p>
                 </div>
-
             </div>
-            <div class="half-section">
-                <div class="recipie-item">
-
-                    <div>
-                        <img src="images/recipies (3).jpg" alt="">
-                    </div>
-                    <div>
-                        <h2>
-                            Easy Taco Skillet
-                        </h2>
-                        <p>
-                            Heat a large skillet over medium heat; cook and stir beef and onion until beef is browned,
-                            about
-                            5
-                            minutes. Drain. Stir tomatoes, water, rice, and taco seasoning into
-                        </p>
-                    </div>
+            <div class="recipies-item">
+                <div>
+                    <img src="images/recipies (2).jpg" alt="">
                 </div>
-
-
+                <div>
+                    <h2>
+                        Baked Chicken Schnitzel
+                    </h2>
+                    <p>
+                        Growing up, chicken schnitzel was a classic. I decided to make this dish oven-friendly using
+                        less oil, and an easier cleanup. This dish tastes great with potato salad, or mashed potatoes and
+                        a nice crisp salad. Tastes great the next day cold too! It's a family-favorite! 
+                        squeezed lemon.
+                    </p>
+                </div>
             </div>
+            <div class="recipies-item">
 
+                <div>
+                    <img src="images/recipies (3).jpg" alt="">
+                </div>
+                <div>
+                    <h2>
+                        Easy Taco Skillet
+                    </h2>
+                    <p>
+                        Heat a large skillet over medium heat; cook and stir beef and onion until beef is browned,about
+                        5 minutes. Drain. Stir tomatoes, water, rice, and taco seasoning intocrisp salad. Tastes great
+                        the next day cold too! It's a family-favorite! Enjoy with fresh
+                        squeezed It's a family-favorite!
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
+    <footer>
+        <h1><span class="name-color"> FOOD </span> NETWORK</h1>
+        <p> Eat healthy to live healthy. Live healthy to live happy </p>
+    </footer>
 </body>
 
 </html>
