--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
         <a href="index.html"><img src="images/logo.png" alt="logo img"></a>
         <div class="nav-list">
             <ul>
-                <li> HOME</li>
-                <li>ABOUT</li>
-                <li>RECIPIES</li>
-                <li>REVIEW</li>
-                <li>CONTACT-US</li>
+                <li><a target="_blank" href="#"> HOME</a> </li>
+                <li><a target="_blank" href="#">ABOUT </a> </li>
+                <li><a target="_blank" href="#">RECIPIES </a> </li>
+                <li><a target="_blank" href="#">REVIEW </a> </li>
+                <li><a target="_blank" href="#"> CONTACT-US</a> </li>
             </ul>
         </div>
     </nav>
     <section class="section1 flexiable">
         <div class="half-section discription">
             <h1>
-                <span class="name-color">Skip</span> The Diet,<br>Just Eat Healthy <br> With Food Network
+                <span class="span-color">Skip</span> The Diet,<br>Just Eat Healthy <br> With Food Network
             </h1>
             <p>
                 I believe our healing journey with real food can be a stress-free life, filled with joy and flavor.
@@ -98,8 +98,9 @@
                     </h2>
                     <p>
                         Growing up, chicken schnitzel was a classic. I decided to make this dish oven-friendly using
-                        less oil, and an easier cleanup. This dish tastes great with potato salad, or mashed potatoes and
-                        a nice crisp salad. Tastes great the next day cold too! It's a family-favorite! 
+                        less oil, and an easier cleanup. This dish tastes great with potato salad, or mashed potatoes
+                        and
+                        a nice crisp salad. Tastes great the next day cold too! It's a family-favorite!
                         squeezed lemon.
                     </p>
                 </div>
@@ -124,8 +125,8 @@
         </div>
     </section>
     <footer>
-        <h1><span class="name-color"> FOOD </span> NETWORK</h1>
-        <p> Eat healthy to live healthy. Live healthy to live happy </p>
+        <h2><span class="span-color"> FOOD </span> NETWORK</h2>
+        <p> <small>Eat healthy to live healthy. Live healthy to live happy</small> </p>
     </footer>
 </body>
 
