complete review section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </ul>
         </div>
     </nav>
+    <!-----------------------home  section---------------------->
     <section class="section1 flexiable">
         <div class="half-section discription">
             <h1>
@@ -42,6 +43,7 @@
             <img src="images/section1.png" alt="">
         </div>
     </section>
+    <!-----------------------About section---------------------->
     <section class="section2 flexiable">
 
         <div class="half-section">
@@ -63,6 +65,7 @@
         </div>
 
     </section>
+    <!-----------------------Recipies section---------------------->
     <section class="recipies-section">
         <h1>My Recipies</h1>
         <P> If life could only be as simple as following a recipe, we’d all be much happier. However,<br> unlike food
@@ -122,6 +125,44 @@
                     </p>
                 </div>
             </div>
+        </div>
+    </section>
+    <!-----------------------Review section---------------------->
+    <section class="review">
+        <h1>What Our Customer's Says </h1>
+        <p> This is our Review section from our customers, Who have been recivied our foods. </p>
+        <div class="review-row">
+            <div class="review-col">
+                <img src="images/review person1.png" alt="reviewer img">
+                <div>
+                    <p>
+                        This cozy restaurant has left the best impressions! Hospitable hosts, delicious dishes,
+                        beautiful presentation, wide wine list and wonderful dessert. I recommend to everyone! I would
+                        like to come back here again and again.
+                    </p>
+                    <h2>
+                        Rohim Khan.
+                    </h2>
+                    <h3> ★★★★✰ </h3>
+
+                </div>
+            </div>
+            <div class="review-col">
+                <img src="images/review person2.png" alt="Student img">
+                <div>
+                    <p>
+                        I have to say, I enjoyed every single bite of the meal in (RN). I had a 3 course meal, with a
+                        couple of beers. Considering the quality, the price is reasonable. Ideal for those who want a
+                        romantic night out. There was also plenty of room for bigger groups
+                    </p>
+                    <h2>
+                        Chokina Begum.
+                    </h2>
+                    <h3> ★★★★★ </h3>
+
+                </div>
+            </div>
+
         </div>
     </section>
     <footer>
