--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 
         </div>
     </section>
+    <!-----------------------Footer------------------------------>
     <footer>
         <h2><span class="span-color"> FOOD </span> NETWORK</h2>
         <p> <small>Eat healthy to live healthy. Live healthy to live happy</small> </p>
